<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@mipmap/post_view_location"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/textView_postView_locationResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/vieta"
            android:layout_gravity="center"
            android:textSize="18sp" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@mipmap/post_view_description"/>
        <TextView
            android:paddingHorizontal="16dp"
            android:id="@+id/textView_postView_descriptionResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_gravity="center"
            android:text="@string/description"
            android:textSize="18sp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@mipmap/post_view_date"/>
        <TextView
            android:id="@+id/textView_postView_timeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/laikas"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_postView_sportType" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@mipmap/post_view_sport"/>
        <TextView
            android:id="@+id/textView_postView_sportTypeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/sporto_saka"
            android:textSize="18sp" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@mipmap/post_view_owner"/>
        <TextView
            android:id="@+id/textView_postView_creatorResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/kurejas"
            android:textSize="18sp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@mipmap/post_view_participants"/>
        <TextView
            android:id="@+id/textView_postView_participantsResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_gravity="center"
            android:text="@string/participants"
            android:textSize="18sp" />
        <ImageView
            android:id="@+id/button_postView_join"
            android:layout_marginTop="55dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:clickable="true"
            android:layout_gravity="center"
            android:src="@mipmap/post_view_join"/>
    </LinearLayout>
</ScrollView>